@@ -32,7 +32,7 @@ externals:
   url: svn://svn.wowace.com/wow/libsharedmedia-3-0/mainline/trunk
   tag: latest
  Libs/LibBars-1.0:
-  url: svn://svn.wowace.com/wow/libbars-1-0/mainline/trunk
+  url: svn://svn.wowace.com/wow/libbars-1-0/mainline/trunk/LibBars-1.0
   tag: latest
  Libs/LibResComm-1.0:
   url: svn://svn.wowace.com/wow/librescomm-1-0/mainline/trunk
